# feature-importance

./: .gitignore  LICENSE  README.md  pom.xml  requirements.txt  setup.cfg  tox.ini
f_importance/: __init__.py
f_importance/dataset/: __init__.py  data.py
f_importance/metrics/: __init__.py
f_importance/model/: __init__.py  gini.py  models.py  voting.py
f_importance/util/: __init__.py  runner.py
f_importance/visualize/: __init__.py
f_importance_examples/: 01-Installation.ipynb  02- Pima Indians Diabetes Database.ipynb
tests/: test_data.py  test_metrics.py  test_model.py
