[metadata]
name = f_importance
author = Kameni Alex
author_email = kamenialexnea@gmail.com
version = attr: f_importance.__version__
description = Feature Importance Apps
long_description = file: README.md, LICENSE.rst
keywords = feature importance selection explainable data-science machine-learning
license = MIT
url = https://github.com/KameniAlexNea/feature-importance
classifiers =
    DevelopmentStatus :: 5 - Production/Stable
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages =
    f_importance
install_requires =
    numpy>=1.17.3
    pandas
    scipy
    scikit-learn>=0.20.3
    tqdm
    lightgbm
    xgboost
